--- a/src/components/banner/banner.pug
+++ b/src/components/banner/banner.pug
@@ -4,7 +4,7 @@ section.home-banner
 			.swiper-slide
 				.hero-image
 					a(href="") 
-						img(src="./images/banner/b-1.png", alt="")
+						img(src="./images/banner/b-1.jpg", alt="")
 					.product-list-slide 
 						ul
 							li
@@ -32,7 +32,7 @@ section.home-banner
 			.swiper-slide
 				.hero-image
 					a(href="") 
-						img(src="./images/banner/b-2.png", alt="")
+						img(src="./images/banner/b-2.jpg", alt="")
 					.product-list-slide 
 						ul
 							li
@@ -60,7 +60,7 @@ section.home-banner
 			.swiper-slide
 				.hero-image
 					a(href="") 
-						img(src="./images/banner/b-3.png", alt="")
+						img(src="./images/banner/b-3.jpg", alt="")
 					.product-list-slide 
 						ul
 							li
