--- a/src/components/core/title.sass
+++ b/src/components/core/title.sass
@@ -14,3 +14,9 @@
 			color: $white
 		&-black
 			color: #000
+	@media screen and ( max-width: 1366px )
+		padding: r(24px)
+		&_big
+			font-size: r(36px)
+		&_small
+			font-size: r(28px)
