--- a/src/components/core/util.sass
+++ b/src/components/core/util.sass
@@ -52,6 +52,8 @@
 		font-family: Material Icons
 		font-size: r(30px) !important
 		color: $white
+	&:focus
+		outline: none
 .swiper-button-next
 	right: -80px !important
 	&::before
