--- a/src/components/home/h-2/h-2.pug
+++ b/src/components/home/h-2/h-2.pug
@@ -1,4 +1,4 @@
-section.section.card-hdbank(setBackground="./images/bg-1.png")
+section.section.card-hdbank(setBackground="./images/bg-1.jpg")
 	.container 
 		h2.title.title_small.title_small-white Thoải mái mua sắm cùng thẻ HDBank
 		.single-swiper.desktop 
