--- a/src/components/home/h-3/h-3.pug
+++ b/src/components/home/h-3/h-3.pug
@@ -1,10 +1,10 @@
-section.section.customer(setBackground="./images/bg-2.png")
+section.section.customer(setBackground="./images/bg-2.jpg")
 	.container 
 		h2.title.title_small.title_small-white Khách hàng cá nhân
 		.big-image 
 			.img-inner 
 				a(href="") 
-					img(src="./images/customer-1.png", alt="")
+					img(src="./images/customer-1.jpg", alt="")
 			.wrapper-content 
 				.desc 
 					a(href="") Bảo hiểm chăm sóc sức khoẻ toàn cầu - GHC
