--- a/src/components/home/h-6/h-6.pug
+++ b/src/components/home/h-6/h-6.pug
@@ -1,12 +1,12 @@
 section.section.digital-store 
 	.digital-search 
 		.container 
-			form(action="", method="post") 
+			form.form-search(action="", method="post") 
 				.form-group 
-					span  Happy Digital Store
+					h2  Happy Digital Store
 					input.form-control(type="text" placeholder="Hôm nay bạn muốn mua gì")
 					button.search-icon(type="submit") 
-						em.fas.fa-search
+						img(src="./images/icons/search.png", alt="")
 	.banner-digital 
-		img.lazyload(data-src="./images/digital-banner.png", alt="")
+		img.lazyload(data-src="./images/digital-banner.jpg", alt="")
 	
