--- a/src/components/home/h-4/h-4.pug
+++ b/src/components/home/h-4/h-4.pug
@@ -11,7 +11,7 @@ section.section.comparny#sec-4
 									.slide-inner
 										.img 
 											a(href="") 
-												img(src="./images/compartny-1.png", alt="")
+												img(src="./images/compartny-1.jpg", alt="")
 										.wrapper-content 
 											.desc 
 												a(href="") eCMB - Bộ công cụ số toàn diện dành cho doanh nghiệp
@@ -48,6 +48,7 @@ section.section.comparny#sec-4
 			.list-item.d-flex 
 				-for(i=1; i<10; i++)
 					.item 
-						img(src="./images/icons/p-"+i+".png", alt="")
+						a(href="") 
+							img(src="./images/icons/p-"+i+".png", alt="")
 						p eAccount
-		a.btn.btn-viewmore(href="") Xem thêm
+			a.btn-viewmore(href="") Xem thêm
