--- a/src/components/home/h-4/h-4.sass
+++ b/src/components/home/h-4/h-4.sass
@@ -105,6 +105,7 @@
 		&_big
 			background-image: url('../images/icons/bg-icon.png')
 			background-repeat: no-repeat
+			background-size: 100% 100%
 			height: 100%
 			align-items: flex-start
 
@@ -136,3 +137,32 @@
 				display: block
 				width: 84px
 				height: 84px
+			p
+				font-size: 16px
+				line-height: 23px
+				text-align: center
+				color: #000000
+				margin-bottom: 0
+	.btn-viewmore
+		margin: 0 auto
+		position: relative
+		display: flex
+		align-items: center
+		justify-content: center
+		width: 130px
+		height: 40px
+		border: 1px solid #333333
+		box-sizing: border-box
+		border-radius: 50px
+		color: $black
+		font-size: r(14px)
+		&::after
+			content: '\f1df'
+			font-family: Material Icons
+			font-size: r(15px)
+			padding-top: 5px
+			padding-left: 8px
+			transition: all ease-in-out .3s
+		&:hover
+			&::after
+				transform: rotate(-25deg)
