--- a/src/components/home/h-8/h-8.pug
+++ b/src/components/home/h-8/h-8.pug
@@ -1,15 +1,17 @@
 section.section.new-hdbank 
 	.container 
 		h2.title.title_big.title_big-black Bản tin HDBank
-		.swiper-container
-			.swiper-wrapper
-				-for(i=1; i<4; i++)
-					.swiper-slide
-						.slide-inner
-							a(href="")
-								img.lazyload(data-src="./images/n-"+i+".png", alt="")
-								p.tilte
-									| HDBank chính thức tiếp nhận nguồn tài trợ đóng góp, ủng hộ cho Quỹ vắcxin
-							a.detail(href="") Xem chi tiết
+		.new-slide
+			.swiper-container
+				.swiper-wrapper
+					-for(i=1; i<4; i++)
+						.swiper-slide
+							.slide-inner
+								a.img(href="")
+									img(src="./images/n-"+i+".png", alt="")
+								.wrap-content 
+									a.name(href="")
+										| HDBank chính thức tiếp nhận nguồn tài trợ đóng góp, ủng hộ cho Quỹ vắcxin
+									a.detail(href="") Xem chi tiết
 			.swiper-button-next
 			.swiper-button-prev
