--- a/src/components/banner/banner.pug
+++ b/src/components/banner/banner.pug
@@ -82,11 +82,14 @@ section.home-banner
 										span Bảo hiểm
 									em.lnr.lnr-chevron-right
 		.swiper-pagination
-	.ticker-wrap
-		.ticker
-			.ticker__item 🔥 Miễn phí thường niên khi đăng ký thẻ VISA HDBank
-			.ticker__item 🛍 Hoàn tiền lên đến 500K khi thanh toán qua thẻ Vietjet VISA
-			.ticker__item ⭐️ Đăng ký hôm nay - trúng ngay táo xịn. Mở tài khoản 5 phút nhanh chóng
+	#carouselTicker.carouselTicker
+		ul.carouselTicker__list
+			li.carouselTicker__item
+				span 🔥 Miễn phí thường niên khi đăng ký thẻ VISA HDBank
+			li.carouselTicker__item
+				span 🛍 Hoàn tiền lên đến 500K khi thanh toán qua thẻ Vietjet VISA
+			li.carouselTicker__item
+				span ⭐️ Đăng ký hôm nay - trúng ngay táo xịn. Mở tài khoản 5 phút nhanh chóng
 	.card-tool-box 
 		.card-switcher 
 			ul.header-switcher.d-flex.align-center 
