--- a/src/components/banner/banner.sass
+++ b/src/components/banner/banner.sass
@@ -63,7 +63,7 @@
 							.lnr
 								background: $main
 								color: $white
-	.ticker-wrap
+	.carouselTicker
 		overflow: hidden
 		position: absolute
 		top: 24px
@@ -74,25 +74,31 @@
 		backdrop-filter: blur(30px)
 		border-radius: 12px
 		z-index: 99
-		.ticker
-			padding: 11px 24px
+		padding: 8px 24px
+		&__list
 			width: 100%
 			display: flex
 			align-items: center
 			flex-wrap: nowrap
-			&__item
+			margin: 0
+			padding-left: 0
+			.carouselTicker__item
 				margin-right: 24px
-				white-space: nowrap
-				font-weight: 600
-				font-size: r(18px)
-				color: $white
+				border: none
+				float: none
+				margin: 0
+				span
+					white-space: nowrap
+					font-weight: 600
+					font-size: r(18px)
+					color: $white
 		@media screen and ( max-width: 1366px )
 			top: 15px
 			max-width: 1024px
-			.ticker
-				padding: 8px 15px !important
-				&__item
-					font-size: r(14px)
+			&__list
+				.carouselTicker__item
+					span
+						font-size: r(14px)
 
 .card-tool-box
 	position: absolute
