--- a/src/components/banner/banner.sass
+++ b/src/components/banner/banner.sass
@@ -102,7 +102,6 @@
 
 .card-tool-box
 	position: absolute
-	padding: 24px
 	bottom: 24px
 	right: 7.9%
 	z-index: 99
@@ -112,6 +111,9 @@
 	backdrop-filter: blur(80px)
 	border-radius: 20px
 	.card-switcher
+		width: 100%
+		height: 100%
+		padding: 24px
 		.header-switcher
 			margin-bottom: 16px
 			display: flex
@@ -357,6 +359,7 @@
 			&.active
 				display: block
 	.from-slide-advise
+		padding: 24px
 		display: none
 		width: 100%
 		height: 100%
@@ -427,5 +430,3 @@
 				&:hover
 					&::after
 						right: 30%
-		&.active
-			display: block
