--- a/src/components/core/title.sass
+++ b/src/components/core/title.sass
@@ -1,22 +1,26 @@
 .title
-	padding: r(32px) 0
-	text-align: center
+	padding: r(32px) 0 !important
+	text-align: center !important
+	float: none !important
+	border-radius: 0 !important
+	background: none !important
+	height: unset !important
 	&_big
-		font-size: r(40px)
-		color: #000
-		font-weight: 700
-		line-height: 58px
+		font-size: r(40px) !important
+		color: #000 !important
+		font-weight: 700 !important
+		line-height: 58px !important
 	&_small
-		font-size: r(32px)
-		font-weight: 800
-		line-height: 120%
+		font-size: r(32px) !important
+		font-weight: 800 !important
+		line-height: 120% !important
 		&-white
-			color: $white
+			color: $white !important
 		&-black
-			color: #000
+			color: #000 !important
 	@media screen and ( max-width: 1366px )
-		padding: r(24px)
+		padding: r(24px) !important
 		&_big
-			font-size: r(36px)
+			font-size: r(36px) !important
 		&_small
-			font-size: r(28px)
+			font-size: r(28px) !important
