--- a/src/components/global/footer/footer.pug
+++ b/src/components/global/footer/footer.pug
@@ -21,6 +21,9 @@ footer
 							|SWIFT code: HDBCVNVX 
 			.col-lg-9
 				.menu-box.d-flex
+					.footer__logo__arrow
+						img(src='./images/icons/upTop.svg' alt='')
+
 					.menu-list 
 						.footer-infor_tile
 							span Vì sao chọn HDBank?
