--- a/src/components/home/h-5/h-5.pug
+++ b/src/components/home/h-5/h-5.pug
@@ -4,56 +4,14 @@ section.section.banner-innerhome
 			.swiper-slide
 				.swiper-inner
 					.image
-						img(src="./images/watch.jpg", alt="")
-					.wrap-content
-						.slide-title 
-							p.small-text Đăng ký hôm nay
-							p.big-text Rước ngay
-								br
-								| táo xịn
-						ul.list
-							li 
-								span.fas.fa-check-circle
-								p 
-									span Thời gian: 
-									| 01/11/2021 - 31/12/2021
-							li 
-								span.fas.fa-check-circle
-								p 
-									span Đối tượng: 
-									| Khách hàng mới tại HDBank
-							li 
-								span.fas.fa-check-circle
-								p Tổng giá trị giải thưởng lên đến 
-									span 700 triệu 
-						a.btn-detail(href="") 
-							span Chi tiết
+						a(href="") 
+							img(src="./images/banner-1.jpg", alt="")
 			.swiper-slide
 				.swiper-inner
 					.image
-						img(src="./images/bike.jpg", alt="")
-					.wrap-content
-						.slide-title 
-							p.small-text Gửi tiết kiệm online
-							p.big-text Trúng ngay
-								br
-								| xế xịn
-						ul.list
-							li 
-								span.fas.fa-check-circle
-								p 
-									span Thời gian: 
-									span 01/11/2021 - 31/12/2021
-							li 
-								span.fas.fa-check-circle
-								p 
-									span Đối tượng: 
-									span Khách hàng mới tại HDBank
-							li 
-								span.fas.fa-check-circle
-								p Tổng giá trị giải thưởng lên đến 
-									span 500 triệu 
-						a.btn.btn-detail(href="") Chi tiết
+						a(href="") 
+							img(src="./images/banner-2.jpg", alt="")
+					
 		.swiper-pagination
 		.swiper-button-next
 		.swiper-button-prev
