--- a/src/components/home/h-7/h-7.sass
+++ b/src/components/home/h-7/h-7.sass
@@ -22,7 +22,8 @@
 	.flash-sale,
 	.product-hot
 		.title
-			text-align: left
+			text-align: left !important
+			color: $black !important
 	.pro-flash,
 	.pro-hot
 		position: relative
