--- a/src/components/home/h-4/h-4.sass
+++ b/src/components/home/h-4/h-4.sass
@@ -15,7 +15,7 @@
 						height: 100%
 						content: ''
 						z-index: 2
-						background: linear-gradient(360deg, rgba(0, 0, 0, 0.75) 8.88%, rgba(0, 0, 0, 0) 63.45%), url(.jpg)
+						background: linear-gradient(360deg, rgba(0, 0, 0, 0.75) 8.88%, rgba(0, 0, 0, 0) 63.45%)
 			.wrapper-content
 				position: absolute
 				padding: 0 24px
