--- a/src/components/home/h-7/h-7.pug
+++ b/src/components/home/h-7/h-7.pug
@@ -13,7 +13,7 @@ section.section.product-section
 			.swiper-button-next
 			.swiper-button-prev 
 		.flash-sale
-			h2.title ⚡️ Flash SALE
+			h2.title.title_small ⚡️ Flash SALE
 			.pro-flash
 				.swiper-container
 					.swiper-wrapper
@@ -28,7 +28,7 @@ section.section.product-section
 												.price 1.500.000
 				.swiper-button-next
 		.product-hot
-			h2.title 🔥 Sản phẩm HOT
+			h2.title.title_small 🔥 Sản phẩm HOT
 			.pro-hot
 				.swiper-container
 					.swiper-wrapper
