--- a/src/components/global/footer/footer.pug
+++ b/src/components/global/footer/footer.pug
@@ -89,15 +89,17 @@ footer
 				li
 					a(href="") Sơ đồ trang
 		.footer-bottom.d-flex.justify-between
-			.download-app 
+			.download-app
 				span Tải app HDBank
-				ul.d-flex
-					li
-						a(href="") 
-							img(src="./images/chplay.png", alt="")
-					li
-						a(href="") 
-							img(src="./images/appstore.png", alt="")
+				.qr-code.d-flex.align-center
+					img(src="./images/QRcode.png", alt="")
+					ul
+						li
+							a(href="") 
+								img(src="./images/chplay.png", alt="")
+						li
+							a(href="") 
+								img(src="./images/appstore.png", alt="")
 			.socail-box 
 				span Kết nối với HDBank
 				ul.d-flex
