--- a/src/components/global/footer/footer.sass
+++ b/src/components/global/footer/footer.sass
@@ -75,11 +75,13 @@ footer
 				margin-bottom: 8px
 				display: block
 		.download-app
-			ul
-				align-items: center
-				padding-left: 0
-				li
-					margin-right: 16px
+			.qr-code
+				ul
+					padding-left: 0
+					margin-bottom: 0
+					margin-left: 24px
+					li
+						margin-right: 16px
 		.socail-box
 			span
 				text-align: right
