--- a/src/components/core/button.sass
+++ b/src/components/core/button.sass
@@ -35,26 +35,16 @@
 				top: 10px
 			&:nth-child(4)
 				top: 20px
-		// &.active
-		// 	span
-		// 		&:nth-child(1)
-		// 			top: 18px
-		// 			width: 0%
-		// 			left: 50%
-		// 		&:nth-child(2)
-		// 			-webkit-transform: rotate(45deg)
-		// 			-moz-transform: rotate(45deg)
-		// 			-o-transform: rotate(45deg)
-		// 			transform: rotate(45deg)
-		// 		&:nth-child(3)
-		// 			-webkit-transform: rotate(-45deg)
-		// 			-moz-transform: rotate(-45deg)
-		// 			-o-transform: rotate(-45deg)
-		// 			transform: rotate(-45deg)
-		// 		&:nth-child(4)
-		// 			top: 18px
-		// 			width: 0%
-		// 			left: 50%
+
+		@media screen and ( min-width: 320px )
+			min-width: 24px
+			min-height: 24px
+			span
+				&:nth-child(2),
+				&:nth-child(3)
+					top: 8px
+				&:nth-child(4)
+					top: 16px
 
 	&-login
 		position: relative
