--- a/src/components/home/h-2/h-2.pug
+++ b/src/components/home/h-2/h-2.pug
@@ -50,7 +50,7 @@ section.section.card-hdbank(setBackground="./images/bg-1.jpg")
 								.slide-inner 
 									.img-card 
 										a(href="") 
-											img(src="./images/card/card-mb-"+i+".jpg", alt="")
+											img(src="./images/card/card-mb-"+i+".png", alt="")
 										.icon 
 											img(src="./images/repay.png", alt="")
 									.title-card 
@@ -68,7 +68,7 @@ section.section.card-hdbank(setBackground="./images/bg-1.jpg")
 								.slide-inner 
 									.img-card 
 										a(href="") 
-											img(src="./images/card/card-mb-"+i+".jpg", alt="")
+											img(src="./images/card/card-mb-"+i+".png", alt="")
 										.icon 
 											img(src="./images/repay.png", alt="")
 									.title-card 
@@ -86,7 +86,7 @@ section.section.card-hdbank(setBackground="./images/bg-1.jpg")
 								.slide-inner 
 									.img-card 	
 										a(href="") 
-											img(src="./images/card/card-mb-"+i+".jpg", alt="")
+											img(src="./images/card/card-mb-"+i+".png", alt="")
 										.icon 
 											img(src="./images/repay.png", alt="")
 									.title-card 
