--- a/src/components/global/footer/footer.pug
+++ b/src/components/global/footer/footer.pug
@@ -3,7 +3,7 @@ footer
 		img(src='./images/icons/upTop.svg' alt='')
 	.container 
 		.row 
-			.col-lg-3.col-md-3
+			.col-lg-3.col-sm-12
 				.infor-box
 					a.logo-footer(href="") 
 						img(src="./images/Logo.png", alt="")
@@ -21,7 +21,7 @@ footer
 							|Fax: (028) 62 915 900
 						li 
 							|SWIFT code: HDBCVNVX 
-			.col-lg-9.col-md-9
+			.col-lg-9.col-sm-12
 				.menu-box.d-flex
 					.menu-list 
 						.footer-infor_tile
