--- a/src/components/global/footer/footer.sass
+++ b/src/components/global/footer/footer.sass
@@ -28,7 +28,6 @@ footer
 	.menu-box
 		position: relative
 		align-items: flex-start
-		border-top: solid 1px rgba($color: $black, $alpha: .4)
 		.menu-list
 			padding-top: 40px
 			margin-left: auto
@@ -100,6 +99,11 @@ footer
 			.mobile
 				@media screen and ( min-width: 576px )
 					display: none
+	@media screen and ( max-width: 992px )
+		.menu-box
+			justify-content: space-between
+			.menu-list
+				margin-left: 0
 	@media screen and ( max-width: 768px )
 		padding: 48px 12px
 		.infor-box
@@ -107,10 +111,10 @@ footer
 			.logo-footer
 				margin-bottom: 25px
 		.menu-box
+			border-top: solid 1px rgba($color: $black, $alpha: .4)
 			padding-top: 16px
 			flex-direction: column
 			.menu-list
-				margin-left: 0
 				padding-top: 8px
 				width: 100%
 				.footer-infor_tile
