--- a/src/components/home/h-2/h-2.sass
+++ b/src/components/home/h-2/h-2.sass
@@ -90,7 +90,7 @@
 			.slide-inner
 				display: flex
 				flex-direction: column
-				// justify-content: space-between
+				justify-content: center
 				align-items: center
 				width: 100%
 				height: 100%
@@ -98,11 +98,10 @@
 				.img-card
 					position: relative
 					width: 100%
+					display: flex
 					a
 						width: 100%
-						img
-							width: 100%
-
+						text-align: center
 					.icon
 						position: absolute
 						top: 16px
@@ -132,6 +131,8 @@
 						&::after
 							right: calc( 100% - 50px )
 							top: 59%
+						@media screen and ( max-width: 575px )
+							width: 70%
 			.swiper-slide
 				&-active
 					.slide-inner
