--- a/src/components/promotion/atm/atm.pug
+++ b/src/components/promotion/atm/atm.pug
@@ -1,5 +1,5 @@
 section.section.atm-location 
-    .container-fluid 
+    .container
         .row 
             .col-12.col-lg-12.col-xl-8 
                 .title-mobile
