--- a/src/components/faq/banner/index.pug
+++ b/src/components/faq/banner/index.pug
@@ -3,6 +3,6 @@ section.banner
         img(src="./images/faq/banner.png", alt="")
     .banner-mobile
         img(src="./images/faq/banner-mb.png", alt="")
-    .left-info
-        h1.banner-title Câu hỏi thường gặp 
-        p.banner-description Tham khảo và tìm đáp án cho các câu hỏi thường gặp mà ngân hàng HDBank đã tổng hợp sẵn cho quý khách!
+    //- .left-info
+    //-     h1.banner-title Câu hỏi thường gặp 
+    //-     p.banner-description Tham khảo và tìm đáp án cho các câu hỏi thường gặp mà ngân hàng HDBank đã tổng hợp sẵn cho quý khách!
