--- a/src/components/news/banner/style.sass
+++ b/src/components/news/banner/style.sass
@@ -21,52 +21,61 @@
 			height: auto !important
 			a
 				+img-ratio(258/375)	
-		.info-box
+		.info-box-container
+			width: 100%
+			height: 100%
 			position: absolute
-			bottom: 50px
+			left: 0
+			bottom: 0
+			background: linear-gradient(360deg, rgba(0, 0, 0, 0.75) 11.34%, rgba(0, 0, 0, 0) 35.88%)
 			@media ( max-width: 575.98px )
 				bottom: 0
-			.top-info
-				display: flex
-				font-size: 1rem
-				align-items: center
-				margin-bottom: 20px
-				@media screen and ( max-width: 575.98px )
-					margin-bottom: 10px
-				.category-name
-					background: #FFF9E2
-					border-radius: 21px
-					padding: 8px 16px
-					margin-right: 20px
-					font-weight: bold
-					@media screen and ( max-width: 575.98px )
-						font-size: 10px
-						padding: 4px 8px
-				.date-created
-					color: #FFFFFF
-					font-size: 1.5rem
-					@media screen and ( max-width: 575.98px )
-						font-size: 0.75rem
-			.news-title
-				font-weight: 800
-				font-size: 2rem
-				line-height: 47px
-				color: #FFFFFF
-				@media screen and ( max-width: 575.98px )
-					font-size: 1rem
-					line-height: 22px
-					font-weight: 700
-		.swiper-pagination
-			left: auto !important
-			@media ( max-width: 575.98px )
-				top: 0 !important
-				left: 0 !important
-				right: 0 !important
-				margin: auto
-			.swiper-pagination-bullet
+			.info-box
+				position: absolute
+				bottom: 50px
 				@media ( max-width: 575.98px )
-					width: 10px
-					height: 10px
+					bottom: 0
+				.top-info
+					display: flex
+					font-size: 1rem
+					align-items: center
+					margin-bottom: 20px
+					@media screen and ( max-width: 575.98px )
+						margin-bottom: 10px
+					.category-name
+						background: #FFF9E2
+						border-radius: 21px
+						padding: 8px 16px
+						margin-right: 20px
+						font-weight: bold
+						@media screen and ( max-width: 575.98px )
+							font-size: 10px
+							padding: 4px 8px
+					.date-created
+						color: #FFFFFF
+						font-size: 1.5rem
+						@media screen and ( max-width: 575.98px )
+							font-size: 0.75rem
+				.news-title
+					font-weight: 800
+					font-size: 2rem
+					line-height: 47px
+					color: #FFFFFF
+					@media screen and ( max-width: 575.98px )
+						font-size: 1rem
+						line-height: 22px
+						font-weight: 700
+			.swiper-pagination
+				left: auto !important
+				@media ( max-width: 575.98px )
+					top: 0 !important
+					left: 0 !important
+					right: 0 !important
+					margin: auto
+				.swiper-pagination-bullet
+					@media ( max-width: 575.98px )
+						width: 10px
+						height: 10px
 	@media ( max-width: 575.98px )
 		.hero-image
 			width: 100%
