--- a/src/components/promotion/atm/atm.pug
+++ b/src/components/promotion/atm/atm.pug
@@ -9,10 +9,10 @@ section.section.atm-location
                     h2.title.title_big-black Mạng lưới chi nhánh/ATM
                     .tabs 
                         ul.tab-list.d-flex
-                            li.active(rel="#panel-1") Chi nhánh
-                            li(rel="#panel-2") ATM
+                            li.active(rel="panel-1") Chi nhánh
+                            li(rel="panel-2") ATM
                         include ./form-group.pug
-                        .panel.active#panel-1
+                        #panel-1.panel.active
                             .row 
                                 .col-sm-12.col-lg-6
                                     ul.panel_list 
@@ -43,7 +43,7 @@ section.section.atm-location
                                 .col-sm-12.col-lg-6
                                     .map 
                                         img(src="./images/promotion/map.png", alt="")
-                        .panel#panel-2
+                        #panel-2.panel
                             .row 
                                 .col-sm-12.col-lg-6
                                     ul.panel_list 
