--- a/src/components/global/header/header.pug
+++ b/src/components/global/header/header.pug
@@ -15,7 +15,7 @@
 				.search-box
 					form.searchform(action="", method="post") 
 						.form-group
-							input.searchinput(type="text", name="inputSearch" placeholder="Tìm kiếm")
+							input.searchinput(type="text", name="inputSearch" placeholder="Nhập từ khoá tìm kiếm")
 							button(type="submit") 
 								img(src="./images/icons/search.png", alt="")
 
