--- a/src/components/banner/card-tool-box.sass
+++ b/src/components/banner/card-tool-box.sass
@@ -328,3 +328,19 @@
                 &:hover
                     &::after
                         right: 30%
+    .dot
+        text-align: center
+        display: flex
+        align-items: center
+        justify-content: center
+        margin-bottom: 24px
+        span
+            display: block
+            width: 12px
+            height: 12px
+            margin-right: 16px
+            border-radius: 50%
+            background: #E2E7EF
+            backdrop-filter: blur(10px)
+            &.active
+                background: $main
