--- a/src/components/breakcrumb/styke.sass
+++ b/src/components/breakcrumb/styke.sass
@@ -1,6 +1,6 @@
 .breadcrumb-wrapper
 	background-color: #F9FAFC
-	padding: 8px 8px 8px 24px
+	padding: 16px 0
 	.breadcrumb
 		width: 100%
 		display: flex
@@ -15,7 +15,7 @@
 			a
 				position: relative
 				display: block
-				color: $black 
+				color: $black
 			&.active
 				a
 					font-weight: 700
@@ -30,4 +30,3 @@
 					font-family: Material Icons
 					color: $black
 					font-weight: normal
-
