--- a/src/components/global/header/header.sass
+++ b/src/components/global/header/header.sass
@@ -15,15 +15,27 @@
 				.searchform
 					.form-group
 						width: 400px
-						height: 58px
+						height: 42px
 						position: relative
 						background: #F9FAFC
 						border-radius: 42px
 						.searchinput
+							border-radius: 30px
 							width: 100%
 							height: 100%
 							background: $tran
-							padding-left: 15px
+							padding-left: 20px
+							padding-right: 35px
+							font-size: 16px
+							line-height: 1.63
+							letter-spacing: -.5px
+							color: #333
+							&::placeholder
+								font-size: 12px
+								line-height: 2.42
+								letter-spacing: -.5px
+								color: #333
+								opacity: .2
 						button
 							position: absolute
 							top: 50%
