--- a/src/components/product-card/banner/index.pug
+++ b/src/components/product-card/banner/index.pug
@@ -1,10 +1,12 @@
-section.banner-page-product
+section.page-banner
     .swiper-container
         .swiper-wrapper
-            -for(i=1; i<3; i++)
+            -for(i=1; i<4; i++)
                 .swiper-slide
-                    .banner-inner.banner-inner_desktop 
-                        img(src="./images/producttion/hero-banner.png", alt="")
-                    .banner-inner.banner-inner_mobile 
-                        img(src="./images/producttion/hero-banner-mb.png", alt="")
+                    .slide-inner.slide-inner_desktop 
+                        .slide-inner__img
+                            img(src="./images/producttion/hero-banner.png", alt="")
+                    .slide-inner.slide-inner_mobile 
+                        .slide-inner__img
+                            img(src="./images/producttion/hero-banner-mb.png", alt="")
     .swiper-pagination
