--- a/src/components/product-general/banner/index.pug
+++ b/src/components/product-general/banner/index.pug
@@ -3,9 +3,10 @@ section.page-banner
         .swiper-wrapper
             -for(i=1; i<4; i++)
                 .swiper-slide
-                    .slide-inner
+                    .slide-inner.slide-inner_desktop 
                         .slide-inner__img
-                            a(href="")
-                                img(src="./images/producttion/banner-signup.png", alt="")
+                            img(src="./images/producttion/banner-signup.png", alt="")
+                    .slide-inner.slide-inner_mobile 
+                        .slide-inner__img
+                            img(src="./images/producttion/banner-signup-mb.png", alt="")
     .swiper-pagination
-    
