--- a/src/components/promotion/atm/style.sass
+++ b/src/components/promotion/atm/style.sass
@@ -1,192 +1,223 @@
 .atm-location
-    .title-mobile
-        text-align: center
-        padding-top: 24px
-        background: $white
-        .title
-            padding: 0 !important
-        .material-icons
-            font-size: r(30px)
-            color: $black
-            text-align: center
-        @media screen and ( min-width: 576px )
-            display: none
+	.tabs
+		.tab-list
+			justify-content: center
+			margin-bottom: 32px
+			padding-left: 0
+			li
+				padding: 14px 50.4px
+				background: #FFFFFF
+				border: 1.4px solid #B1B5C9
+				box-sizing: border-box
+				cursor: pointer
+				font-weight: 800
+				font-size: r(19.6px)
+				line-height: 29px
+				color: #333333
+				&:first-child
+					border-radius: 12px 0px 0px 12px
+				&:last-child
+					border-radius: 0px 12px 12px 0px
+				&.active
+					background: #F00020
+					color: $white
+					border: 0
+		@media screen and ( max-width: 575.98px )
+			.tab-list
+				margin-bottom: 16px
+				li
+					width: 50%
+					padding: 8px
+					font-size: r(15px)
+					text-align: center
+	.title-mobile
+		text-align: center
+		padding-top: 24px
+		background: $white
+		.title
+			padding: 0 !important
+		.material-icons
+			font-size: r(30px)
+			color: $black
+			text-align: center
+		@media screen and ( min-width: 576px )
+			display: none
 
-    .right-block
-        padding: 24px 24px 40px 48px
-        background: #F9FAFC
-        border-radius: 20px
-        .tabs
-            .group-iput
-                display: flex
-                align-items: center
-                justify-content: center
-                margin-bottom: 32px
-                .form-group
-                    position: relative
-                    margin-left: 8px
-                    &:first-child
-                        margin-left: 0
-                    .form-control
-                        padding: 12px 16px
-                        width: 250.67px
-                        height: 48px
-                        background: #FFFFFF
-                        border-radius: 40px
-                        border: 0
-                    select.form-control
-                        padding-left: 40px
-                        -webkit-appearance: none
-                        -moz-appearance: none
-                        -ms-appearance: none
-                        appearance: none
-                        position: relative
-                        background-image: url('../images/icons/select.png')
-                        background-repeat: no-repeat
-                        background-position: 5%
-                        border: none
-                        &:focus
-                            outline: none
-                            box-shadow: none
-                    button
-                        position: absolute
-                        top: 50%
-                        right: 10px
-                        transform: translateY(-50%)
-                        background: $tran
+	.right-block
+		padding: 24px 24px 40px 48px
+		background: #F9FAFC
+		border-radius: 20px
+		.tabs
+			.group-iput
+				display: flex
+				align-items: center
+				justify-content: center
+				margin-bottom: 32px
+				.form-group
+					position: relative
+					margin-left: 8px
+					&:first-child
+						margin-left: 0
+					.form-control
+						padding: 12px 16px
+						width: 250.67px
+						height: 48px
+						background: #FFFFFF
+						border-radius: 40px
+						border: 0
+					select.form-control
+						padding-left: 40px
+						-webkit-appearance: none
+						-moz-appearance: none
+						-ms-appearance: none
+						appearance: none
+						position: relative
+						background-image: url('../images/icons/select.png')
+						background-repeat: no-repeat
+						background-position: 5%
+						border: none
+						&:focus
+							outline: none
+							box-shadow: none
+					button
+						position: absolute
+						top: 50%
+						right: 10px
+						transform: translateY(-50%)
+						background: $tran
 
-            .panel
-                &_list
-                    padding-left: 0
-                    &__item
-                        &-title
-                            display: flex
-                            align-items: center
-                            em
-                                font-weight: 700
-                                font-size: r(20px)
-                                line-height: 29px
-                                color: $main
-                            p
-                                margin-bottom: 0
-                                font-weight: 700
-                                font-size: r(20px)
-                                line-height: 29px
-                                color: $main
-                                padding-left: 10px
-                            img
-                                margin-left: auto
-                                width: 13.5px
-                                height: 13.5px
-                        &-desc
-                            p
-                                line-height: 23px
-                                color: $black
-                                margin-bottom: 0
-                                &:last-child
-                                    opacity: .4
-    .left-block
-        display: flex
-        flex-direction: column
-        justify-content: flex-start
-        height: 100%
-        background-image: url('../images/bg-2.jpg')
-        background-repeat: no-repeat
-        background-size: cover
-        padding: 24px
-        background-blend-mode: multiply, overlay, normal
-        border-radius: 20px
-        .material-icons
-            font-size: r(30px)
-            color: $white
-            text-align: center
-            @media screen and ( min-width: 576px )
-                display: none
-        .side-navigation-wrap
-            .side-navigation
-                padding-left: 0
-                margin-bottom: 0
-                li
-                    margin-bottom: 16px
-                    .accordion-title
-                        font-weight: bold
-                        font-size: 20px
-                        line-height: 125%
-                        color: $white
-                        display: flex
-                        align-items: flex-start
-                        .ri-arrow-down-s-line
-                            margin-left: auto
-                        p
-                            padding-left: 10px
-                    &.active
-                        padding: 24px
-                        background: #FFFFFF
-                        border-radius: 20px
-                        .accordion-title
-                            color: $main
-                    .nav-sub
-                        display: none
-            .btn-viewmore
-                border: 1px solid $white
-                &::after
-                    color: $white
-                span
-                    color: $white
-    @media screen and ( max-width: 768.98px )
-        .right-block
-            padding: 24px
-            margin-bottom: 24px
-            .tabs
-                .group-iput
-                    .form-group
-                        width: 33.33%
-                        .form-control
-                            width: 100%
-                .panel
-                    &_list
-                        &__item
-                            &-title
-                                p
-                                    font-size: r(15px)
-                            &-desc
-                                p
-                                    font-size: r(12px)
-                    .map
-                        +img-ratio(350/768)
+			.panel
+				&_list
+					padding-left: 0
+					&__item
+						&-title
+							display: flex
+							align-items: center
+							em
+								font-weight: 700
+								font-size: r(20px)
+								line-height: 29px
+								color: $main
+							p
+								margin-bottom: 0
+								font-weight: 700
+								font-size: r(20px)
+								line-height: 29px
+								color: $main
+								padding-left: 10px
+							img
+								margin-left: auto
+								width: 13.5px
+								height: 13.5px
+						&-desc
+							p
+								line-height: 23px
+								color: $black
+								margin-bottom: 0
+								&:last-child
+									opacity: .4
+	.left-block
+		display: flex
+		flex-direction: column
+		justify-content: flex-start
+		height: 100%
+		background-image: url('../images/bg-2.jpg')
+		background-repeat: no-repeat
+		background-size: cover
+		padding: 24px
+		background-blend-mode: multiply, overlay, normal
+		border-radius: 20px
+		.material-icons
+			font-size: r(30px)
+			color: $white
+			text-align: center
+			@media screen and ( min-width: 576px )
+				display: none
+		.side-navigation-wrap
+			.side-navigation
+				padding-left: 0
+				margin-bottom: 0
+				li
+					margin-bottom: 16px
+					.accordion-title
+						font-weight: bold
+						font-size: 20px
+						line-height: 125%
+						color: $white
+						display: flex
+						align-items: flex-start
+						.ri-arrow-down-s-line
+							margin-left: auto
+						p
+							padding-left: 10px
+					&.active
+						padding: 24px
+						background: #FFFFFF
+						border-radius: 20px
+						.accordion-title
+							color: $main
+					.nav-sub
+						display: none
+			.btn-viewmore
+				border: 1px solid $white
+				&::after
+					color: $white
+				span
+					color: $white
+	@media screen and ( max-width: 768.98px )
+		.right-block
+			padding: 24px
+			margin-bottom: 24px
+			.tabs
+				.group-iput
+					.form-group
+						width: 33.33%
+						.form-control
+							width: 100%
+				.panel
+					&_list
+						&__item
+							&-title
+								p
+									font-size: r(15px)
+							&-desc
+								p
+									font-size: r(12px)
+					.map
+						+img-ratio(350/768)
 
-        .left-block
-            .side-navigation-wrap
-                .side-navigation
-                    li
-                        .accordion-title
-                            font-size: r(15px)
-                        .nav-sub
-                            p
-                                font-size: r(12px)
-    @media screen and ( max-width: 575.98px )
-        .right-block
-            display: none
-            .title
-                display: none
-            .tabs
-                .group-iput
-                    flex-direction: column
-                    margin-bottom: 16px
-                    .form-group
-                        width: 100%
-                        margin-left: 0
-                        margin-bottom: 8px
-                        select.form-control
-                            padding-left: 50px
-        .col-xl-4
-            padding: 0
-            .title-mobile
-                background: linear-gradient(167.6deg, #FFD541 7.65%, #DA3A20 89.4%)
-                .material-icons
-                    color: $white
-        .left-block
-            display: none
-            border-radius: 0
-            .title
-                display: none
+		.left-block
+			.side-navigation-wrap
+				.side-navigation
+					li
+						.accordion-title
+							font-size: r(15px)
+						.nav-sub
+							p
+								font-size: r(12px)
+	@media screen and ( max-width: 575.98px )
+		.right-block
+			display: none
+			.title
+				display: none
+			.tabs
+				.group-iput
+					flex-direction: column
+					margin-bottom: 16px
+					.form-group
+						width: 100%
+						margin-left: 0
+						margin-bottom: 8px
+						select.form-control
+							padding-left: 50px
+		.col-xl-4
+			padding: 0
+			.title-mobile
+				background: linear-gradient(167.6deg, #FFD541 7.65%, #DA3A20 89.4%)
+				.material-icons
+					color: $white
+		.left-block
+			display: none
+			border-radius: 0
+			.title
+				display: none
