--- a/src/components/priority-user/banner/index.pug
+++ b/src/components/priority-user/banner/index.pug
@@ -4,16 +4,15 @@ section.priority-user-banner
 			.swiper-slide
 				.hero-image
 					a(href="") 
-						img.desktop(src="./images/banner/b-1.jpg", alt="")
-						img.mobile(src="./images/banner/banner-1.jpg", alt="")
-			.swiper-slide
-				.hero-image
-					a(href="") 
-						img.desktop(src="./images/banner/b-2.jpg", alt="")
-						img.mobile(src="./images/banner/banner-2.jpg", alt="")
-			.swiper-slide
-				.hero-image
-					a(href="") 
-						img.desktop(src="./images/banner/b-3.jpg", alt="")
-						img.mobile(src="./images/banner/banner-3.jpg", alt="")
-		.swiper-pagination
+						img.desktop(src="./images/priority-user/banner-desktop.png", alt="")
+						img.mobile(src="./images/priority-user/banner-mobile.png", alt="")
+					.info-box-container
+						.container
+							.info-box 
+								.row 
+									.col-12.col-lg-8.col-xl-9
+										p.title Khách hàng doanh nghiệp VIP
+								.row 
+									.col-12.col-lg-12.col-xl-12
+										p.description Đội ngũ tư vấn chuyên biệt luôn luôn sẵn sàng phục vụ quý doanh nghiệp 24/7
+							.swiper-pagination
