--- a/src/components/product-card/catalog-card/index.pug
+++ b/src/components/product-card/catalog-card/index.pug
@@ -5,31 +5,26 @@ section.section.catelog-card
 			.form-group 
 				select.form-control
 					option(value="") Tất cả thẻ
-		.tabs
-			ul.tab-list
-				li.active(rel="hashtag-1") 
-					a(href="")
+		.tag-list.tabs
+			.nav-list
+				ul.tab-list
+					li.active(rel="hashtag-1") 
 						p Cashback-hoàn tiền
-				li(rel="hashtag-2")
-					a(href="")
+					li(rel="hashtag-2")
 						p Du lịch
-				li(rel="hashtag-3")
-					a(href="")
+					li(rel="hashtag-3")
 						p Trả góp
-				li(rel="hashtag-4")
-					a(href="")
+					li(rel="hashtag-4")
 						p Mua sắm
-				li(rel="hashtag-5")
-					a(href="")
+					li(rel="hashtag-5")
 						p hashtag
-				li(rel="hashtag-6")
-					a(href="")
+					li(rel="hashtag-6")
 						p hashtag
 			#hashtag-1.panel.hashtag-content.active
 				.row 
 					-for(i=1; i<11; i++)
-						.col-lg-4 
-							.card-list_item 
+						.col-6.col-lg-4 
+							.card-list_item.specail-img 
 								.card-list_item__img 
 									a(href="")
 										img(src="./images/producttion/c-"+i+".png", alt="") 
@@ -42,7 +37,7 @@ section.section.catelog-card
 			#hashtag-2.panel.hashtag-content
 				.row 
 					-for(i=1; i<11; i++)
-						.col-lg-4 
+						.col-6.col-lg-4 
 							.card-list_item 
 								.card-list_item__img 
 									a(href="")
