--- a/src/components/product-general/signup-loan/index.pug
+++ b/src/components/product-general/signup-loan/index.pug
@@ -1,5 +1,5 @@
 .right-box 
-    h1.title.title_small.title_small_white Chỉ 30 phút có ngay khoản vay
+    h1.title.title_small.title_small-white Chỉ 30 phút có ngay khoản vay
     .right-box_content 
         ul 
             li 
