--- a/src/pages/product-card.pug
+++ b/src/pages/product-card.pug
@@ -10,9 +10,9 @@ block main
 	include ../components/product-card/catalog-card/index.pug
 	section.section.tool-card-product 
 		.container 
-			.row 
-				.col-lg-4
+			.row
+				.col-lg-6.col-xl-4
 					include ../components/product-card/tool/index.pug
-				.col-lg-8 
+				.col-lg-6.col-xl-8 
 					include ../components/product-card/promotion-card/index.pug
 	include ../components/promotion/atm/atm.pug
