--- a/src/components/_core/reset.sass
+++ b/src/components/_core/reset.sass
@@ -1,5 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Be+Vietnam:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,300;1,400;1,500;1,600;1,700;1,800&display=swap')
 @import url('https://fonts.googleapis.com/css2?family=Be+Vietnam:ital,wght@0,100;0,300;1,100;1,300;1,400;1,500;1,600;1,700;1,800&display=swap')
+::-webkit-scrollbar-track
+	box-shadow: inset 0 0 6px rgba(255, 255, 255, 0)
+	background-color: #f5f5f5
+	border-radius: 20px
+::-webkit-scrollbar
+	width: 5px
+	height: 3px
+::-webkit-scrollbar-thumb
+	border-radius: 3px
+	box-shadow: inset 0 0 6px rgba(255, 255, 255, 0)
+	background-color: $yellow
 html
 
 	line-height: 1.5
@@ -40,8 +51,8 @@ h1, h2, h3, h4, h5, h6
 	margin-bottom: 0
 
 p
-	margin-top: 0
-	margin-bottom: 0
+	margin-top: 0 !important
+	margin-bottom: 0 !important
 
 abbr[title], abbr[data-original-title]
 	text-decoration: underline
@@ -162,8 +173,17 @@ button, input
 button, select
 	text-transform: none
 
-select
+select.form-control
 	word-wrap: normal
+	-webkit-appearance: none !important
+	-moz-appearance: none !important
+	-ms-appearance: none !important
+	appearance: none !important
+	position: relative !important
+	background-image: url('../images/icons/select.png') !important
+	background-repeat: no-repeat !important
+	background-position: 5% !important
+	border: none !important
 
 button, [type="button"], [type="reset"], [type="submit"]
 	-webkit-appearance: button
