--- a/src/components/global/header/header.sass
+++ b/src/components/global/header/header.sass
@@ -1,15 +1,24 @@
 .nav-top
 	width: 100%
-	position: relative
+	position: fixed
 	padding-top: 15/16*1rem
 	padding-bottom: 25/16*1rem
+	z-index: 99
+	background: $white
+	transition: all ease-in-out .3s
 	nav
 		.nav-full
 			.btn-toggle
+				margin-top: 10px
 				margin-right: 27px
 			.logo
-				display: block
-				max-width: 205px
+				min-width: 205px
+				transition: all ease-in-out .3s
+
+				a
+					+img-ratio(72/205)
+					transition: all ease-in-out .3s
+
 			.search-box
 				margin-left: auto
 				.searchform
@@ -79,6 +88,7 @@
 					box-shadow: 0px 14px 40px rgba(33, 43, 54, 0.1)
 					border-radius: 20px
 					right: 0
+					transition: all ease-in-out .5s
 					.dropdown-item
 						a
 							span
@@ -99,6 +109,7 @@
 				display: flex
 				align-items: center
 				justify-content: center
+				transition: all ease-in-out .3s
 			.bell-ring
 				order: 4
 				margin-left: 19px
@@ -138,8 +149,9 @@
 				.btn-toggle
 					margin-right: 10px
 				.logo
-					max-width: 104px
-
+					min-width: 104px
+					a
+						+img-ratio(36/104)
 				.dropdown
 					order: 5
 					margin-left: 15px
@@ -177,7 +189,7 @@
 
 		.nav-toggle
 			padding: r(48px) r(24px)
-			max-width: 310px
+			max-width: 410px
 			height: 100%
 			background: $white
 			.logo
@@ -222,12 +234,12 @@
 							background: none
 			.srcoll-bar
 				max-height: 80%
+				padding-right: 20px
 				overflow-y: auto
 				&::-webkit-scrollbar-track
 					box-shadow: inset 0 0 6px rgba(255, 255, 255, 0)
 					background-color: #f5f5f5
 					border-radius: 20px
-					display: none
 				&::-webkit-scrollbar
 					width: 5px
 					height: 90px
@@ -235,7 +247,6 @@
 					border-radius: 3px
 					box-shadow: inset 0 0 6px rgba(255, 255, 255, 0)
 					background-color: $yellow
-					display: none
 				.login
 					.btn-login
 						width: 100%
@@ -361,3 +372,13 @@
 						.title
 							padding: 0 !important
 					.side-navigation-wrap
+	&.header-croll-down
+		padding: 10px 0
+		nav
+			.nav-full
+				.logo
+					min-width: 153px
+					a
+						+img-ratio(54/153)
+				.btn-login
+					height: 43.5px
