--- a/src/components/product-card/catalog-card/style.sass
+++ b/src/components/product-card/catalog-card/style.sass
@@ -1,4 +1,114 @@
-.tool-card-product
-    .card-tool-box
-        width: 100%
-        position: static
+.catelog-card
+    background-size: cover
+    background-repeat: no-repeat
+    background-image: url('../images/producttion/bg.png')
+    .filter-catelog
+        .form-group
+            select
+                margin: 0 auto
+                padding: 12px 16px 12px 45px
+                width: 480px
+                background: #F9FAFC
+                border-radius: 40px
+                -webkit-appearance: none
+                -moz-appearance: none
+                -ms-appearance: none
+                appearance: none
+                position: relative
+                background-image: url('../images/icons/select.png')
+                background-repeat: no-repeat
+                background-position: 3%
+                border: none
+                &:focus
+                    outline: none
+                    box-shadow: none
+    .tag-list
+        .hashtag-content
+            padding-top: 4px
+            max-width: 1024px
+            margin: 0 auto
+            .col-lg-4
+                margin-bottom: 47px
+                &:last-child
+                    margin: 0 auto
+            .card-list_item
+                width: 100%
+                height: 100%
+                padding: 16px
+                display: flex
+                flex-direction: column
+                align-items: center
+                justify-content: center
+                &__img
+                    margin: auto 0
+                &__contennt
+                    padding-top: 16px
+                    &-title
+                        a
+                            p
+                                font-weight: 700
+                                font-size: r(20px)
+                                line-height: 26px
+                                color: $black
+                                margin-bottom: 0
+
+                    .btn-small
+                        margin: 16px auto 0
+                        width: 135px
+                        height: 40px
+                        transition: all ease-in-out .5s
+                        p,
+                        &::before
+                            transition: all ease-in-out .5s
+                        @media screen and ( min-width: 1025px )
+                            &:hover
+                                background: $main
+                                p
+                                    color: $white
+                                    transform: translateX(-20px)
+                                &::before
+                                    color: $white
+                                    transform: translateX(55px)
+
+    @media screen and ( max-width: 1199.98px )
+        .tabs
+            .hashtag-content
+                .col-lg-4
+                    margin-bottom: 0
+                .card-list_item
+                    &__contennt
+                        &-title
+                            a
+                                p
+                                    font-size: r(15px)
+    @media screen and ( max-width: 768.98px )
+        .filter-catelog
+            .form-group
+                select
+                    width: 100%
+                    padding-left: 50px
+        .tabs
+            .hashtag-content
+                .card-list_item
+                    &__contennt
+                        &-title
+                            a
+                                p
+                                    line-height: 14px
+                                    text-align: center
+                                    font-size: r(14px)
+
+    @media screen and ( max-width: 575.98px )
+        .tabs
+            .hashtag-content
+                .card-list_item
+                    &__contennt
+                        padding-top: 8px
+                        .btn-small
+                            margin-top: 8px
+                            padding: 8px 16px
+                            width: 65px
+                            height: 23px
+                            font-size: r(10px)
+                            &::before
+                                display: none
