--- a/src/components/priority-user/content/priority-user.pug
+++ b/src/components/priority-user/content/priority-user.pug
@@ -50,6 +50,7 @@ section.section.priority-user-content
                     img.icon-check(src="./images/priority-user/Bullet.png")
                     span HOTLINE riêng cho KH VIP 24/7 - 
                     span.text-highlight 18006060
+        input.form-control(type="date")
         .customers-box 
             ul.list-customers 
                 li.item-customer.active
