--- a/src/components/priority-user/content/style.sass
+++ b/src/components/priority-user/content/style.sass
@@ -36,6 +36,7 @@
                 &.active
                     font-weight: bold
             .swiper-button-next
+                border: none
                 display: none
                 // background: url(../../../images/priority-user/button/arrownext.png) !important
                 right: -40px !important
@@ -44,6 +45,7 @@
                 @media ( max-width: 575.98px )
                     display: block
             .swiper-button-prev
+                border: none
                 display: none
                 // background: url(../../../images/priority-user/button/arrowprev.png) !important
                 left: -40px !important
